samples/_failures_safe/1761551362_fcf5e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30bc965c.c: In function ‘main’:
./samples/SAFE/__tmp_30bc965c.c:159:25: error: missing terminating " character
  159 |         fprintf(stderr, "Invalid operation.\
      |                         ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_30bc965c.c:159:9: error: expected expression at end of input
  159 |         fprintf(stderr, "Invalid operation.\
      |         ^~~~~~~
./samples/SAFE/__tmp_30bc965c.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30bc965c.c:159:9: error: expected declaration or statement at end of input
